PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Added optional offset parameter to stream_get_contents(). (Ilia)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Implemented access to INI variables from within .ini file. (Andrei)
- PHP will now respect extension dependencies when initializing. (Wez)
- Added SAPI hook to get the current request time. (Rasmus)
- Added new functions:
  . array_diff_key() (Andrey)
  . array_diff_ukey() (Andrey)
  . array_intersect_key() (Christiano Duarte)
  . array_intersect_ukey() (Christiano Duarte)
  . stream_context_get_default() (Wez)
  . stream_socket_enable_crypto() (Wez)
  . stream_wrapper_unregister() (Sara)
  . stream_wrapper_restore() (Sara)
  . stream_filter_remove() (Sara)
  . DomDocumentFragment::appendXML() (Christian)
  . SimpleXMLElement::registerXPathNamespace() (Christian)
  . mysqli::client_info property (Georg)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
  . fputcsv() (David Sklar)
- Added DomDocument::$recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
- Added support of parameter=>value arrays to xsl_xsltprocessor_set_parameter() 
  (Tony)